legacy/differential_testing/regression_ts/gcc_reg_cb/results/gcc540/save_st/pr66066-2.c-5.4.0-0.out.txt
pr66066-2.c:18:10: error: initializer element is not constant
 int b1 = 1 / 0;   
          ^
pr66066-2.c:19:10: error: initializer element is not constant
 int b2 = 1 / (1 / 0);  
          ^
pr66066-2.c:20:10: error: initializer element is not constant
 int b3 = 0 ? 2 : 1 / 0;  
          ^
pr66066-2.c:21:10: error: initializer element is not constant
 int b4 = 0 || 1 / 0;  
          ^
pr66066-2.c:22:10: error: initializer element is not constant
 int b5 = 0 * (1 / 0);  
          ^
pr66066-2.c:23:10: error: initializer element is not constant
 int b6 = 1 * (1 / 0);  
          ^
pr66066-2.c:24:10: error: initializer element is not constant
 int b7 = (1 / 0) * 0;  
          ^
pr66066-2.c:25:10: error: initializer element is not constant
 int b8 = (1 / 0) * 1;  
          ^
pr66066-2.c:26:10: error: initializer element is not constant
 int b9 = 1 && 1 / 0;  
          ^
pr66066-2.c:27:11: error: initializer element is not constant
 int b10 = !(1 / 0);  
           ^
pr66066-2.c:28:10: error: initializer element is not constant
 int c1 = 1 % 0;   
          ^
pr66066-2.c:29:10: error: initializer element is not constant
 int c2 = 1 / (1 % 0);  
          ^
pr66066-2.c:30:10: error: initializer element is not constant
 int c3 = 0 ? 2 : 1 % 0;  
          ^
pr66066-2.c:31:10: error: initializer element is not constant
 int c4 = 0 || 1 % 0;  
          ^
pr66066-2.c:32:10: error: initializer element is not constant
 int c5 = 0 * (1 % 0);  
          ^
pr66066-2.c:33:10: error: initializer element is not constant
 int c6 = 1 * (1 % 0);  
          ^
pr66066-2.c:34:10: error: initializer element is not constant
 int c7 = (1 % 0) * 0;  
          ^
pr66066-2.c:35:10: error: initializer element is not constant
 int c8 = (1 % 0) * 1;  
          ^
pr66066-2.c:36:10: error: initializer element is not constant
 int c9 = 1 && 1 % 0;  
          ^
pr66066-2.c:37:11: error: initializer element is not constant
 int c10 = !(1 % 0);  
           ^
